<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/userProfileActivity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.UserProfileActivity">

  <TextView
    android:id="@+id/userProfileActivityNicknameTitleTextView"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:layout_marginTop="72dp"
    android:gravity="center"
    android:text="@string/nickname_title"
    android:textSize="24sp"
    app:layout_constraintEnd_toStartOf="@+id/userProfileActivityNicknameInputEditText"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/userProfileActivityNicknameInputEditText"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:ems="10"
    android:gravity="center_vertical"
    android:hint="@string/nickname_hint"
    android:importantForAutofill="no"
    android:inputType="textPersonName"
    android:textColorHint="#78909C"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="@+id/userProfileActivityNicknameTitleTextView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/userProfileActivityNicknameTitleTextView"
    app:layout_constraintTop_toTopOf="@+id/userProfileActivityNicknameTitleTextView" />

  <Button
    android:id="@+id/userProfileActivitySaveButton"
    android:layout_width="120dp"
    android:layout_height="60dp"
    android:layout_marginTop="40dp"
    android:text="@string/save_button"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/userProfileActivityNicknameTitleTextView" />

  <Button
    android:id="@+id/userProfileActivityLoginButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/userProfileActivitySaveButton" />

  <Button
    android:id="@+id/userProfileActivityLogoutButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/logout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/userProfileActivityLoginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
